tests/cases/errors/compile_return_no_semicolon.lox
// A return with a value requires a trailing semicolon.
// expect compile error: Expect ';' after return value
fun f() {
  return 1
}
